--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
     <header>
         <nav>
             <h2 class="logo">Portfo<span>lio</span></h2>
-            <ul>
+            <ul id="nav-list" class="nav-list">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
+
             <a href="#" class="btn">Subscribe</a>
+
+            <div id="burger"><i class='bx bx-menu'></i></div>
         </nav>
 
            <div class="introduction">
@@ -156,5 +159,7 @@
         </div>
         <p class="end">&copy;CopyRight by Ibrahim</p>
     </footer>
+
+    <script src="index.js"></script>
 </body>
 </html>
