--- a/index.html
+++ b/index.html
@@ -26,15 +26,29 @@
         <nav>
             <h2 class="logo">Portfo<span>lio</span></h2>
             <ul id="nav-list" class="nav-list">
-                <li><a href="#">Home</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact Me</a></li>
+                <li class="nav-link"><a href="#">Home</a></li>
+                <li class="nav-link"><a href="#about">About Me</a></li>
+                <li class="nav-link"><a href="#services">Services</a></li>
+                <li class="nav-link"><a href="readMore.html">Details</a></li>
+                <li class="nav-link"><a href="#contact">Contact Me</a></li>
+            </ul>
+
+               <ul id="nav-list2" class="nav-list2">
+                <li class="nav-link"><a href="#">Home</a></li>
+                <li class="nav-link"><a href="#about">About Me</a></li>
+                <li class="nav-link"><a href="#services">Services</a></li>
+                <li class="nav-link"><a href="readMore.html">Details</a></li>
+                <li class="nav-link"><a href="#contact">Contact Me</a></li>
             </ul>
 
             <a href="#" class="btn">Subscribe</a>
 
-            <div id="burger"><i class='bx bx-menu'></i></div>
+            <div id="burger">
+            <span class='bar'></span>    
+            <span class='bar'></span>    
+            <span class='bar'></span>    
+            </div>
+        
         </nav>
 
            <div class="introduction">
