--- a/index.html
+++ b/index.html
@@ -159,9 +159,10 @@
             <p>+234-9157835182</p>
             <p>+234-8037041918</p></div>
         </div>
-            
+            <div class="D-needs">
             <p class="needs">Contact me for your needs</p>
             <a href="https://wa.me/+2349157835182" class="button-2">Hire me</a>
+            </div>
         </div>
      </section>
     </main>
@@ -178,6 +179,11 @@
         <p class="end">&copy;CopyRight by Ibrahim</p>
     </footer>
 
+    <!-- scoll reveal effect -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- javascript page -->
     <script src="index.js"></script>
+
 </body>
 </html>
