--- a/readMore.html
+++ b/readMore.html
@@ -27,30 +27,9 @@
      <header>
         <nav>
             <h2 class="logo">Portfo<span>lio</span></h2>
-            <ul id="nav-list" class="nav-list">
-                <li class="nav-link"><a href="index.html">Home</a></li>
-                <li class="nav-link"><a href="#about">About Me</a></li>
-                <li class="nav-link"><a href="#services">Services</a></li>
-                <li class="nav-link"><a href="readMore.html">Details</a></li>
-                <li class="nav-link"><a href="#contact">Contact Me</a></li>
-            </ul>
-
-               <ul id="nav-list2" class="nav-list2">
-                <li class="nav-link"><a href="index.html">Home</a></li>
-                <li class="nav-link"><a href="#about">About Me</a></li>
-                <li class="nav-link"><a href="#services">Services</a></li>
-                <li class="nav-link"><a href="readMore.html">Details</a></li>
-                <li class="nav-link"><a href="#contact">Contact Me</a></li>
-            </ul>
-
+            <p class="page-name"><a href="index.html">Home / </a><span class="det">Details</span></p>
             <a href="#" class="btn">Subscribe</a>
 
-            <div id="burger">
-            <span class='bar'></span>    
-            <span class='bar'></span>    
-            <span class='bar'></span>    
-            </div>
-        
         </nav>
 
            <div class="introduction">
@@ -108,7 +87,7 @@
                         <h3>Graphics Designer</h3>
                         <h5>Apr 2018 – Sep 2018</h5>
                         <h4> <strong>Bukky Signs,Alagomeji Lagos, Nigeria.</strong></h4>
-                        <p>I worked as an intern in this cooperation where I was taught the skill of Graphics designing,
+                        <p>I was hired as an intern in this cooperation where i acquired Graphics designing skills,
                             all while providing customers with satisfactory Id card designs, customer relation services
                             and Brandings.</p>
                     </div>
@@ -132,7 +111,7 @@
                         <h3>Computer and Mobile phone repairs</h3>
                         <h5>Feb 2020 – Oct 2020</h5>
                         <h4> <strong>Ezot Technologies, Onike Lagos, Nigeria.</strong></h4>
-                        <p>I worked here as an Intern and i was taught hardware repair of mobile Phones and Systems.</p>
+                        <p>I intered and learnt hardware repair of mobile Phones and Systems.</p>
                     </div>
 
                 </div>
@@ -159,10 +138,10 @@
                         <h3>Team Lead & Front-End web developer</h3>
                         <h5>Feb 2023 till date</h5>
                         <h4> <strong>Kuagi Resources ltd Nigeria</strong></h4>
-                        <p>I am tasked with the management and organization of social events and other activities such
+                        <p>I am tasked with the management and organization of social events amongst other activities such
                             as Team meets, Strategy meetings and so
                             on, to build and improve my department in the
-                            organization.
+                            organization.<br>
                             I also have to deal with customer relations and
                             management for the business hub of which I am
                             one of the leads.</p>
@@ -220,7 +199,11 @@
         </div>
         <p class="end">&copy;CopyRight by Ibrahim</p>
     </footer>
+    
+  <!-- scoll reveal effect -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
+  <!-- javascript page -->
     <script src="index.js"></script>
 </body>
 
