--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <section id="about">
             <div class="about">
-                <img src="/image/profile.png" alt="">
+                <img src="profile.png" alt="">
                 <div class="about-text">
                     <h2>About Me</h2>
                     <h5>Web Developer <span>& Graphics Designer</span></h5>
