--- a/readMore.html
+++ b/readMore.html
@@ -45,19 +45,19 @@
                 </div>
             </div>
 
-            <div id="R-img">
+            <!-- <div id="R-img" class="img">
                 <div class="header-box"></div>
                 <div class="header-box2"></div>
                 <div class="header-box3"></div>
             </div>
-        </div>
+        </div> -->
     </header>
 
 
     <main>
         <div class="middle-container">
             <div class="profile">
-                <img class="profile-img" src="/image/profile.png" alt="profile image">
+                <img class="profile-img" src="profile.png" alt="profile image">
                 <div class="profile-text">
                     <h2>Hi ! ! !</h2>
                     <center>
