--- a/readMore.html
+++ b/readMore.html
@@ -175,9 +175,10 @@
                         </div>
                     </div>
 
+                    <div class="D-needs">
                     <p class="needs">Contact me for your needs</p>
                     <a href="https://wa.me/+2349157835182" class="button-2">Hire me</a>
-                </div>
+                </div>    </div>
             </section>
     </main>
 
@@ -198,7 +199,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!-- javascript page -->
-    <script src="index.js"></script>
+    <script src="readMore.js"></script>
 </body>
 
 </html>
