--- a/readMore.html
+++ b/readMore.html
@@ -28,7 +28,7 @@
         <nav class="readMoreNav">
             <h2 class="logo">Portfo<span>lio</span></h2>
             <p class="page-name"><a href="index.html">Home / </a><span class="det">Details</span></p>
-            <a href="#" class="btn">Subscribe</a>
+            <!-- <a href="#" class="btn">Subscribe</a> -->
 
         </nav>
 
@@ -36,18 +36,19 @@
             <div>
                 <h1>Hello</h1>
                 <h3>You can get to know more about me below.</h3>
+                <div class="header-box"></div>
 
-                <div class="newsletter" id="R-newsletter">
+                <!-- <div class="newsletter" id="R-newsletter">
                     <form action="">
                         <input type="email" name="email" placeholder="Please enter your Email">
                         <input type="submit" name="submit" value="Let's Begin">
                     </form>
-                </div>
+                </div> -->
             </div>
 
             <!-- <div id="R-img" class="img">
-                <div class="header-box"></div>
-                <div class="header-box2"></div>
+                
+           
                 <div class="header-box3"></div>
             </div>
         </div> -->
