--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <li class="nav-link"><a href="#contact">Contact Me</a></li>
             </ul>
 
-            <a href="#" class="btn">Subscribe</a>
+            <!-- <a href="#" class="btn">Subscribe</a> -->
 
             <div id="burger">
                 <span class='bar'></span>
@@ -60,12 +60,12 @@
                 <h1>Ibrahim O. <span>Ibrahim.</span> </h1>
                 <h3>I am a web Developer and Graphics designer</h3>
 
-                <div class="newsletter">
+                <!-- <div class="newsletter">
                     <form action="">
                         <input type="email" name="email" placeholder="Please enter your Email">
                         <input type="submit" name="submit" value="Let's Begin">
                     </form>
-                </div>
+                </div> -->
             </div>
 
             <div id="img">
