--- a/readMore.html
+++ b/readMore.html
@@ -177,9 +177,10 @@
                     </div>
 
                     <div class="D-needs">
-                    <p class="needs">Contact me for your needs</p>
-                    <a href="https://wa.me/+2349157835182" class="button-2">Hire me</a>
-                </div>    </div>
+                        <p class="needs">Contact me for your needs</p>
+                        <a href="https://wa.me/+2349157835182" class="button-2">Hire me</a>
+                    </div>
+                </div>
             </section>
     </main>
 
