--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- rubix icon -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -55,7 +56,7 @@
         </nav>
 
         <div class="introduction">
-            <div>
+            <div class="intro-text">
                 <h4>Hello, my name is</h4>
                 <h1>Ibrahim O. <span>Ibrahim.</span> </h1>
                 <h3>I am a web Developer and Graphics designer</h3>
@@ -85,7 +86,6 @@
 
     <main>
         <!-- about aspect -->
-
         <section id="about">
             <div class="about">
                 <img src="profile.png" alt="">
