--- a/readMore.html
+++ b/readMore.html
@@ -20,6 +20,9 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- rubix icon -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+    <!-- for bootstarp -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
 </head>
 
@@ -160,6 +163,71 @@
                 </div>
             </section>
 
+            <section id="projects" class="projects">
+                <div class="container carousel slide" data-bs-ride="carousel" id="project">
+
+                    <h2>Projects</h2>
+                    <div class="carousel-inner">
+                        <div class="project-row carousel-item active">
+                            <h3>E-commerce site</h3>
+                            <div class="project-text">
+
+                                <p>To start, I used HTML to create the basic structure of the website. I included a
+                                    header,
+                                    footer, and navigation bar to
+                                    make the website easy to navigate.Next, I used CSS to style the website and make it
+                                    look
+                                    more visually appealing. I chose a color scheme that matched the
+                                    clothing store's branding, and I used CSS to create a responsive design that would
+                                    look
+                                    great on any device.
+
+                                    Once the website was looking good, I used Bootstrap to add some additional
+                                    functionality. I used Bootstrap's grid system
+                                    to create a layout that would work well for displaying products, and I used
+                                    Bootstrap's
+                                    responsive classes to make sure
+                                    the website would look great on any device.
+
+                                    Overall, I'm really happy with how the website turned out. By using Bootstrap, HTML,
+                                    CSS, and Javascript together, I was
+                                    able to create an e-commerce website that looks great, works well, and is easy for
+                                    users
+                                    to navigate..</p>
+                            </div>
+
+                            <a href="https://bolajeee.github.io/E-commerce/" class="button">Click
+                                me</a>
+                        </div>
+
+                        <div class="project-row carousel-item">
+                            <h3>Portfolio</h3>
+                            <div class="project-text">
+
+                                <p>I was also privy to applying my skills to aid in craeting a portfolio for a client
+                                    and
+                                    friend using Html to creat the basic structure of the site, CSS for the styling and
+                                    improving its visual appleal adn javascript to improve the interactiveness of the
+                                    site.
+                                    I and the client was quite satisfied with how it turned out.</p>
+                            </div>
+
+                            <a href="https://bolajeee.github.io/Omonayajo-Mubarak/" class="button">Click
+                                me</a>
+                        </div>
+                    </div>
+
+                    <button class="carousel-control-prev " type="button-2" data-bs-target="#project"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon "></span>
+                    </button>
+
+                    <button class="carousel-control-next" type="button" data-bs-target="#project" data-bs-slide="next">
+                        <span class="carousel-control-next-icon "></span>
+                    </button>
+                </div>
+            </section>
+
 
             <section id="contact">
                 <div class="contact">
@@ -202,6 +270,11 @@
 
     <!-- javascript page -->
     <script src="readMore.js"></script>
+
+    <!-- bootstrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
