--- a/readMore.html
+++ b/readMore.html
@@ -217,8 +217,7 @@
                         </div>
                     </div>
 
-                    <button class="carousel-control-prev " type="button-2" data-bs-target="#project"
-                        data-bs-slide="prev">
+                    <button class="carousel-control-prev " type="button" data-bs-target="#project" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon "></span>
                     </button>
 
